[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/PipeSection.gd" type="Script" id=1]
[ext_resource path="res://scripts/SpawnSystem.gd" type="Script" id=2]
[ext_resource path="res://scenes/GreatWall.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 10, 10, 1 )

[sub_resource type="BoxShape" id=2]

extents = Vector3( 10, 10, 1 )

[node name="PipeSection" type="Spatial"]

script = ExtResource( 1 )
spawns_new_pipes = false

[node name="ObstacleSpawner" type="Spatial" parent="." index="0"]

script = ExtResource( 2 )

[node name="Entry" type="Spatial" parent="." index="1"]

[node name="EntryPoint" type="RayCast" parent="Entry" index="0"]

enabled = false
exclude_parent = true
cast_to = Vector3( 0, 0, 1 )
collision_mask = 1

[node name="GreatWall" parent="Entry/EntryPoint" index="0" instance=ExtResource( 3 )]

transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="EntryArea" type="Area" parent="Entry" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 2
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Collision" ]

[node name="Shape" type="CollisionShape" parent="Entry/EntryArea" index="0"]

shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="Exit" type="Spatial" parent="." index="2"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20 )

[node name="ExitPoint" type="RayCast" parent="Exit" index="0"]

enabled = false
exclude_parent = true
cast_to = Vector3( 0, 0, 1 )
collision_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="ExitArea" type="Area" parent="Exit" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 2
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
_sections_unfolded = [ "Collision" ]

[node name="Shape" type="CollisionShape" parent="Exit/ExitArea" index="0"]

shape = SubResource( 2 )
disabled = false


